--- a/ReadMe.adoc
+++ b/ReadMe.adoc
@@ -1,5 +1,5 @@
-:Author: rmnyachi
-:Email: raman.mathur@gmx.com
+:Author: r-ym
+:Email: ramanyachi@gmail.com
 :Date: 04/07/2017
 :Revision: version#
 :License: Public Domain
@@ -9,17 +9,11 @@
 Describe your project
 
 == Step 1: Installation
-Please describe the steps to install this project.
-
-For example:
-
-1. Open this file
-2. Edit as you like
-3. Release to the World!
+Flash ino file to Arduino once fan is set up.
 
 == Step 2: Assemble the circuit
 
-Assemble the circuit following the diagram layout.png attached to the sketch
+Wire pins to fan mains.
 
 == Step 3: Load the code
 
@@ -28,27 +22,24 @@ Upload the code contained in this sketch on to your board
 === Folder structure
 
 ....
- sketch123                => Arduino sketch folder
-  ├── sketch123.ino       => main Arduino file
-  ├── schematics.png      => (optional) an image of the required schematics
-  ├── layout.png          => (optional) an image of the layout
+ spin_coater               => Arduino sketch folder
+  ├── spin_coater.ino       => main Arduino file
   └── ReadMe.adoc         => this file
 ....
 
 === License
-This project is released under a {License} License.
+Feel free to use and make changes.
 
 === Contributing
-To contribute to this project please contact rmnyachi <raman.mathur@gmx.com>
+To contribute to this project please contact r-ym <ramanyachi@gmail.com>
 
 === BOM
 Add the bill of the materials you need for this project.
 
 |===
-| ID | Part name      | Part number | Quantity
-| R1 | 10k Resistor   | 1234-abcd   | 10       
-| L1 | Red LED        | 2345-asdf   | 5        
-| A1 | Arduino Zero   | ABX00066    | 1        
+| ID | Part name      | Quantity     
+| L1 | Computer Fan   | 1       
+| A1 | Arduino Zero   | 1        
 |===
 
 
